# SF-Game-Engine

./: CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
Application/: App.hpp
Bitmaps/: Bitmap.hpp
Engine/: Engine.cpp  Engine.hpp  Module.hpp  SplashScreenQuotes.hpp  Version.hpp
Engine/Log/: Log.cpp  Log.hpp
Graphics/: Graphics.cpp  Graphics.hpp  PipelineRenderer.hpp  Renderer.hpp  Stage.hpp
Graphics/Buffers/: Buffer.cpp  Buffer.hpp  InstanceBuffer.cpp  InstanceBuffer.hpp  PushHandler.cpp  PushHandler.hpp  StorageBuffer.cpp  StorageBuffer.hpp  StorageHandler.cpp  StorageHandler.hpp  UniformBuffer.cpp  UniformBuffer.hpp  UniformHandler.cpp  UniformHandler.hpp
Graphics/Commands/: CommandBuffer.cpp  CommandBuffer.hpp  CommandPool.cpp  CommandPool.hpp
Graphics/Descriptors/: BasicDescriptor.hpp  DescriptorSet.cpp  DescriptorSet.hpp
Graphics/Devices/: Instance.cpp  Instance.hpp  LogicalDevice.cpp  LogicalDevice.hpp  PhysicalDevice.cpp  PhysicalDevice.hpp
Graphics/Images/: Cubemap.cpp  Cubemap.hpp  Image.cpp  Image.hpp  Image2d.cpp  Image2d.hpp  Image2dArray.cpp  Image2dArray.hpp  ImageDepth.cpp  ImageDepth.hpp
Graphics/Material/: Material.hpp
Graphics/Material/Color/: Color.cpp  Color.hpp  Color.inl
Graphics/Pipelines/: ComputePipeline.hpp  GraphicsPipeline.cpp  GraphicsPipeline.hpp  Pipeline.hpp
Graphics/RenderPass/: FrameBuffer.cpp  FrameBuffer.hpp  RenderPass.cpp  RenderPass.hpp  SwapChain.cpp  SwapChain.hpp
Graphics/Shaders/: CommonVertexInput.hpp  Example.si  ExampleShader.shader  Shader.cpp  Shader.hpp  ShaderBundle.hpp
Graphics/Shaders/Parser/: Parser.cpp  Parser.hpp  ShaderIncludes.cpp  ShaderIncludes.hpp
Graphics/Shapes/: Shape.hpp
Graphics/Windows/: Cursor.hpp  Monitor.cpp  Monitor.hpp  Surface.cpp  Surface.hpp  Window.cpp
ID/: GUID.hpp
Input/: ButtonCodes.hpp
LowLevel/: BitMask.hpp  MagicEnum.hpp  Object.h  Rocket.hpp
Math/: KVP.hpp  Math.hpp
Math/Matrix/: Matrix2.hpp  Matrix3.hpp  Matrix4.hpp
Math/Time/: Time.hpp  Time.inl
Math/Vectors/: Vector.hpp  Vector2.hpp  Vector3.hpp  Vector4.hpp
SF_Engine/: CMakeLists.txt  CmakeLists.txt
SF_Engine/Application/: App.cpp  App.hpp
SF_Engine/Engine/: Engine.hpp  SplashScreenQuotes.hpp  Version.hpp
SF_Engine/Reflection/: Macros.hpp
SF_Engine/Resources/: Resource.hpp  Resources.cpp  Resources.hpp
SF_Engine/TemplateLibrary/: Dynamic.hpp  Move.hpp  TypeTraits.hpp
SF_Engine/UtilityClasses/: Char.hpp  ConstantExpression.hpp  Enumerate.hpp  Export.hpp  ThreadPool.cpp  ThreadPool.hpp  TypeInformation.hpp
TemplateLibrary/: Format.hpp
UtilityClasses/: NoCopy.hpp  StreamFactory.hpp  ThreadPool.hpp  TypeInformation.hpp
