cmake_minimum_required(VERSION 3.0)

# --------------------------------------------------
# Project declaration
# --------------------------------------------------
project("SF"
    VERSION 1.0.0
    DESCRIPTION "Some funny project Monsieur Martin decided to make. Worst mistake of his life"
    LANGUAGES C CXX
)

# --------------------------------------------------
# Language standards
# --------------------------------------------------
set(CMAKE_C_STANDARD 23)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_C_STANDARD_REQUIRED ON)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

# --------------------------------------------------
# Detect architecture for current build folder
# --------------------------------------------------
if(CMAKE_SIZEOF_VOID_P EQUAL 8)
    set(ARCH_SUFFIX "x64")
else()
    set(ARCH_SUFFIX "x86")
endif()

# --------------------------------------------------
# Set output directories in project root
# --------------------------------------------------
if(NOT CMAKE_BUILD_TYPE)
    set(CMAKE_BUILD_TYPE "Debug")
endif()

set(BASE_OUTPUT_DIR "${CMAKE_SOURCE_DIR}/000-Build-${CMAKE_BUILD_TYPE}-${ARCH_SUFFIX}")

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${BASE_OUTPUT_DIR}")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${BASE_OUTPUT_DIR}")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${BASE_OUTPUT_DIR}")
set(CMAKE_PDB_OUTPUT_DIRECTORY "${BASE_OUTPUT_DIR}")

# Multi-config generators (Visual Studio)
if(CMAKE_CONFIGURATION_TYPES)
    foreach(CONFIG ${CMAKE_CONFIGURATION_TYPES})
        string(TOUPPER ${CONFIG} CONFIG_UPPER)
        set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_${CONFIG_UPPER} "${BASE_OUTPUT_DIR}")
        set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_${CONFIG_UPPER} "${BASE_OUTPUT_DIR}")
        set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_${CONFIG_UPPER} "${BASE_OUTPUT_DIR}")
        set(CMAKE_PDB_OUTPUT_DIRECTORY_${CONFIG_UPPER} "${BASE_OUTPUT_DIR}")
    endforeach()
endif()

# --------------------------------------------------
# Compiler flags
# --------------------------------------------------
if(CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
    add_compile_options(-Wall -Wextra -Wpedantic)
elseif(MSVC)
    add_compile_options(
        /W3
        /permissive-
        /Zc:__cplusplus
        /EHsc
        /utf-8
        $<$<CONFIG:Debug>:/Zi>
        $<$<CONFIG:Release>:/O2>
    )
endif()

# Linker flags
set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /ignore:4099,4098")
set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /ignore:4099,4098")
add_compile_options(/wd4005 /wd4224 /wd4267 /wd4244)

# --------------------------------------------------
# Export compile_commands.json
# --------------------------------------------------
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

# --------------------------------------------------
# Add SF_Engine - keep build artifacts out of source
# --------------------------------------------------
add_subdirectory(
    "${CMAKE_SOURCE_DIR}/SF_Engine"                    # SF_Engine source folder
    "${BASE_OUTPUT_DIR}/SF_Engine_Build"               # SF_Engine build folder (outside source!)
)
# Path to the generated version header
set(VERSION_HEADER "./SF_Engine/Engine/Version.hpp")

# Increment build number (Patch) automatically
# We'll store the last build number in a file
set(BUILD_FILE "./build_number.txt")

if(EXISTS "${BUILD_FILE}")
    file(READ "${BUILD_FILE}" LAST_BUILD)
    math(EXPR BUILD_NUMBER "${LAST_BUILD} + 1")
else()
    set(BUILD_NUMBER 0)
endif()

file(WRITE "${BUILD_FILE}" "${BUILD_NUMBER}")

# Generate Version.hpp
file(WRITE "${VERSION_HEADER}" "// Auto-generated by CMake\n")
file(APPEND "${VERSION_HEADER}" "#pragma once\n\n")
file(APPEND "${VERSION_HEADER}" "#include <cstdint>\n#include <string_view>\n\n")
file(APPEND "${VERSION_HEADER}" "namespace SF::Engine {\n")
file(APPEND "${VERSION_HEADER}" "constexpr uint8_t Engine_VERSION_MAJOR = 2025;\n")
file(APPEND "${VERSION_HEADER}" "constexpr uint8_t Engine_VERSION_MINOR = 12;\n")
file(APPEND "${VERSION_HEADER}" "constexpr uint8_t Engine_VERSION_PATCH = ${BUILD_NUMBER};\n")
file(APPEND "${VERSION_HEADER}" "constexpr std::string_view Engine_VERSION = \"2025.12.${BUILD_NUMBER}\";\n")

file(APPEND "${VERSION_HEADER}" "} // namespace SF::Engine\n")

